* added mongodb repository * added day / hour graphs to index.html